Cabal-version: 3.6

Name: gren
Version: 0.2.0

Synopsis:
    The `gren` command line interface.

Description:
    This includes commands like `gren make`, `gren repl`, and many others
    for helping make Gren developers happy and productive.

Author: Robin Heggelund Hansen
Copyright:
    Original work Copyright (c) 2011-2021, Evan Czaplicki.
    Modified work Copyright (c) 2021-present, The Gren CONTRIBUTORS

License: BSD-3-Clause
License-file: LICENSE

Homepage: https://gren-lang.org
Bug-reports: https://github.com/gren-lang/compiler/issues

Category: Compiler, Language

Build-type: Simple

source-repository head
    type:     git
    location: git://github.com/gren/compiler.git


Flag dev {
  Description: Turn off optimization and make warnings errors
  Default: False
}


Common gren-common
    if flag(dev)
        ghc-options: -O0 -Wall
    else
        ghc-options: -O2 -Wall -Werror -threaded "-with-rtsopts=-N"

    default-language: GHC2021

    Hs-Source-Dirs:
        compiler/src
        builder/src
        terminal/impl
        terminal/src

    other-modules:
        Bump
        Diff
        Format
        Init
        Install
        Make
        Publish
        Repl

        -- terminal args
        Terminal
        Terminal.Chomp
        Terminal.Error
        Terminal.Helpers
        Terminal.Internal

        -- from builder/
        AbsoluteSrcDir
        Build
        BackgroundWriter
        Deps.Diff
        Deps.Package
        Deps.Solver
        File
        Generate
        Git
        Reporting
        Reporting.Exit
        Reporting.Exit.Help
        Reporting.Task
        Directories

        -- Gren things
        Gren.Outline
        Gren.Platform
        Gren.Details
        --
        Gren.Compiler.Imports
        Gren.Compiler.Type
        Gren.Compiler.Type.Extract
        Gren.Constraint
        Gren.Docs
        Gren.Float
        Gren.Interface
        Gren.Kernel
        Gren.Licenses
        Gren.Magnitude
        Gren.ModuleName
        Gren.Package
        Gren.String
        Gren.Version

        -- data structures
        Data.Bag
        Data.Index
        Data.Map.Utils
        Data.Name
        Data.NonEmptyList
        Data.OneOrMore
        Data.Utf8

        -- json
        Json.Decode
        Json.Encode
        Json.String

        -- from compiler/
        AST.Canonical
        AST.Optimized
        AST.Source
        AST.Utils.Binop
        AST.Utils.Type
        Canonicalize.Effects
        Canonicalize.Environment
        Canonicalize.Environment.Dups
        Canonicalize.Environment.Foreign
        Canonicalize.Environment.Local
        Canonicalize.Expression
        Canonicalize.Module
        Canonicalize.Pattern
        Canonicalize.Type
        Compile
        Generate.Html
        Generate.Node
        Generate.JavaScript
        Generate.JavaScript.Builder
        Generate.JavaScript.Expression
        Generate.JavaScript.Functions
        Generate.JavaScript.Name
        Generate.Mode
        Nitpick.Debug
        Nitpick.PatternMatches
        Optimize.Case
        Optimize.DecisionTree
        Optimize.Expression
        Optimize.Module
        Optimize.Names
        Optimize.Port
        Parse.Declaration
        Parse.Expression
        Parse.Keyword
        Parse.Module
        Parse.Number
        Parse.Pattern
        Parse.Space
        Parse.String
        Parse.Symbol
        Parse.Type
        Parse.Variable
        Parse.Primitives
        Reporting.Annotation
        Reporting.Doc
        Reporting.Error
        Reporting.Error.Canonicalize
        Reporting.Error.Docs
        Reporting.Error.Import
        Reporting.Error.Json
        Reporting.Error.Main
        Reporting.Error.Pattern
        Reporting.Error.Syntax
        Reporting.Error.Type
        Reporting.Render.Code
        Reporting.Render.Type
        Reporting.Render.Type.Localizer
        Reporting.Report
        Reporting.Result
        Reporting.Suggest
        Reporting.Warning
        Type.Constrain.Expression
        Type.Constrain.Module
        Type.Constrain.Pattern
        Type.Error
        Type.Instantiate
        Type.Occurs
        Type.Solve
        Type.Type
        Type.Unify
        Type.UnionFind
        Paths_gren

    Build-depends:
        ansi-terminal >= 0.11 && < 0.12,
        ansi-wl-pprint >= 0.6.8 && < 0.7,
        base >=4.16 && <5,
        binary >= 0.8 && < 0.9,
        bytestring >= 0.11 && < 0.12,
        containers >= 0.6 && < 0.7,
        directory >= 1.2.3.0 && < 2.0,
        edit-distance >= 0.2 && < 0.3,
        filelock,
        filepath >= 1 && < 2.0,
        ghc-prim >= 0.5.2,
        haskeline,
        mtl >= 2.2.1 && < 3,
        process,
        raw-strings-qq,
        scientific,
        time >= 1.9.1,
        utf8-string,
        vector,
        text >= 2 && < 3

Executable gren
    Import:
        gren-common

    default-language: GHC2021

    Main-Is:
        Main.hs

Test-Suite gren-tests
    Import:
        gren-common

    default-language: GHC2021

    Type:
        exitcode-stdio-1.0

    Hs-Source-Dirs:
        tests

    Main-Is:
        Spec.hs

    other-modules:
        Helpers.Instances
        Parse.Helpers

        -- tests
        Parse.SpaceSpec
        Parse.RecordUpdateSpec
        Parse.UnderscorePatternSpec

    Build-Depends:
        hspec >= 2.7.10 && < 3

    Build-Tool-Depends:
        hspec-discover:hspec-discover >= 2.7.10 && < 3
