Cabal-version: 3.8

Name: gren
Version: 0.6.1

Synopsis:
    The `gren` command line interface.

Description:
    This includes commands like `gren make`, `gren repl`, and many others
    for helping make Gren developers happy and productive.

Author: Robin Heggelund Hansen
Copyright:
    Original work Copyright (c) 2011-2021, Evan Czaplicki.
    Modified work Copyright (c) 2021-present, The Gren CONTRIBUTORS

License: BSD-3-Clause
License-file: LICENSE

Homepage: https://gren-lang.org
Bug-reports: https://github.com/gren-lang/compiler/issues

Category: Compiler, Language

Build-type: Simple

source-repository head
    type:     git
    location: git://github.com/gren/compiler.git

Flag dev {
  Description: Turn off optimization and make warnings errors
  Default: False
}


Library common
    if flag(dev)
        ghc-options: -O0 -Wall -Wno-deprecations
    else
        ghc-options: -O2 -Wall -Werror -Wno-deprecations 

    default-language: GHC2021

    Hs-Source-Dirs:
        compiler/src
        builder/src

    Exposed-Modules:
        -- from builder/
        AbsoluteSrcDir
        Build
        Deps.Diff
        Deps.Package
        File
        Generate
        Reporting
        Reporting.Exit
        Reporting.Exit.Help
        Reporting.Task
        Directories

        -- Gren things
        Gren.Outline
        Gren.Platform
        Gren.Details
        Gren.PossibleFilePath
        Gren.Compiler.Imports
        Gren.Compiler.Type
        Gren.Compiler.Type.Extract
        Gren.Constraint
        Gren.Docs
        Gren.Int
        Gren.Float
        Gren.Interface
        Gren.Kernel
        Gren.Licenses
        Gren.Magnitude
        Gren.ModuleName
        Gren.Package
        Gren.String
        Gren.Version

        -- data structures
        Data.Bag
        Data.Index
        Data.Map.Utils
        Data.Name
        Data.NonEmptyList
        Data.OneOrMore
        Data.Utf8

        -- json
        Json.Decode
        Json.Encode
        Json.String

        -- from compiler/
        AST.Canonical
        AST.Optimized
        AST.Source
        AST.SourceComments
        AST.Utils.Binop
        AST.Utils.Type
        Canonicalize.Effects
        Canonicalize.Environment
        Canonicalize.Environment.Dups
        Canonicalize.Environment.Foreign
        Canonicalize.Environment.Local
        Canonicalize.Expression
        Canonicalize.Module
        Canonicalize.Pattern
        Canonicalize.Type
        Compile
        Generate.Html
        Generate.Node
        Generate.JavaScript
        Generate.JavaScript.Builder
        Generate.JavaScript.Expression
        Generate.JavaScript.Functions
        Generate.JavaScript.Name
        Generate.Mode
        Generate.SourceMap
        Generate.VLQ
        Nitpick.Debug
        Nitpick.PatternMatches
        Optimize.Case
        Optimize.DecisionTree
        Optimize.Expression
        Optimize.Module
        Optimize.Names
        Optimize.Port
        Parse.Declaration
        Parse.Expression
        Parse.Keyword
        Parse.Module
        Parse.Number
        Parse.Pattern
        Parse.Space
        Parse.String
        Parse.Symbol
        Parse.Type
        Parse.Variable
        Parse.Primitives
        Reporting.Annotation
        Reporting.Doc
        Reporting.Error
        Reporting.Error.Canonicalize
        Reporting.Error.Docs
        Reporting.Error.Import
        Reporting.Error.Json
        Reporting.Error.Main
        Reporting.Error.Pattern
        Reporting.Error.Syntax
        Reporting.Error.Type
        Reporting.Render.Code
        Reporting.Render.Type
        Reporting.Render.Type.Localizer
        Reporting.Report
        Reporting.Result
        Reporting.Suggest
        Reporting.Warning
        Type.Constrain.Expression
        Type.Constrain.Module
        Type.Constrain.Pattern
        Type.Error
        Type.Instantiate
        Type.Occurs
        Type.Solve
        Type.Type
        Type.Unify
        Type.UnionFind
        Paths_gren

    Build-depends:
        ansi-wl-pprint >= 1.0.2 && < 2,
        prettyprinter >= 1.7.1 && < 2,
        base >= 4.19 && < 5,
        text >= 2.1.2 && < 3,
        binary >= 0.8 && < 0.9,
        bytestring >= 0.11 && < 0.12,
        containers >= 0.6 && < 0.7,
        directory >= 1.2.3.0 && < 2.0,
        edit-distance >= 0.2 && < 0.3,
        filepath >= 1 && < 2.0,
        ghc-prim >= 0.5.2,
        mtl >= 2.2.1 && < 3,
        raw-strings-qq,
        scientific,
        utf8-string,
        vector,
        base64-bytestring >= 1.2 && < 2,
        indexed-traversable

Executable gren
    default-language: GHC2021

    if flag(dev)
        ghc-options: -O0 -Wall -Wno-deprecations
    else
        ghc-options: -O2 -Wall -Wno-deprecations -Werror -threaded "-with-rtsopts=-N"

    hs-source-dirs:
        terminal

    main-is:
        Main.hs

    other-modules:
        Command
        Make
        Docs
        Repl
        Package.Bump
        Package.Diff
        Package.Validate

    build-depends:
        gren:common,
        base >= 4.19 && <5,
        bytestring >= 0.11 && < 0.12,
        containers >= 0.6 && < 0.7,
        directory >= 1.2.3.0 && < 2.0,
        filepath >= 1 && < 2.0,
        process,
        haskeline,
        utf8-string,
        mtl >= 2.2.1 && < 3,

Test-Suite gren-tests
    default-language: GHC2021
    
    ghc-options: -O0 -Wall

    Type:
        exitcode-stdio-1.0

    Hs-Source-Dirs:
        tests

    Main-Is:
        Spec.hs

    other-modules:
        Helpers.Instances
        Helpers.Parse

        -- tests
        Generate.VLQSpec
        Parse.AliasSpec
        Parse.RecordUpdateSpec
        Parse.SpaceSpec
        Parse.UnderscorePatternSpec
        Parse.MultilineStringSpec
        Parse.DeclSpec

    Build-Depends:
        gren:common,
        base >= 4.19 && <5,
        utf8-string,
        bytestring >= 0.11 && < 0.12,
        hspec >= 2.7.10 && < 3

    Build-Tool-Depends:
        hspec-discover:hspec-discover >= 2.7.10 && < 3
